# agent-kb_mcp-ga

./: .clinerules  .dockerignore  .env.example  .gitignore  Dockerfile  Premises.md  README.md  TODO.md  build.sh  docker-compose.yml  manage.py  pyproject.toml
app/: db.py  main.py
app/api/: env.py  mcp.py
app/api/v1/routers/: memory.py  ticket.py
app/api/v2/routers/: tools.py
app/jobs/: auto_reassign.py
app/models/: __init__.py  audit_log.py  helper.py  memory.py  memory_model.py  staff.py  staff_attendance.py  ticket.py
app/modules/: __init__.py  memory_manager.py
app/server/: __init__.py  auth.py  config.py  dependencies.py  errors.py  logging.py  middleware.py
app/skills/: create_ticket.py  definitions.yaml  implementations.py  ticket.py
docs/assets/: releaseTemplate.md
docs/changelog/: 0.1.0 - Initial Release.md  0.1.1 - Minor Release.md  0.1.2 - Feature and Refactor Release.md
scripts/: generate_tokens.py  supervisor.py  tokens.json
