[project]
name = "central-memory"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "hypercorn>=0.17.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "colorama>=0.4.6",
    "fastapi-mcp>=0.4.0",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9"
]
